--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,6 @@
     <title>Spring 3.0 MVC Series</title>
 </head>
 <body>
-    <a href="mcq.html">Get on new adventure.</a>
+    <a href="./mcq.html">Get on new adventure.</a>
 </body>
 </html>
